Remove tooltips from breadcrumbs
Fixes #4

--- a/views/flashmobPage.ejs
+++ b/views/flashmobPage.ejs
@@ -9,9 +9,9 @@
             <!-- Breadcrumb-->
             <div id="breadcrumbs">
                 Ви знаходитесь:
-                <a title="Home" href="#">Головна</a> &raquo;
-                <a title="Features" href="#">Флешмоби</a> &raquo;
-                <a title="Features" href="#">Перший</a>
+                <a href="#">Головна</a> &raquo;
+                <a href="#">Флешмоби</a> &raquo;
+                <a href="#">Перший</a>
             </div>
             <!-- ENDS Breadcrumb-->
         </div>
