--- a/views/flashmobs_create.ejs
+++ b/views/flashmobs_create.ejs
@@ -8,9 +8,9 @@
 				<!-- Breadcrumb-->
 				<div id="breadcrumbs">
 					Ви тут: 
-					<a title="Home" href="#">Головна</a> &raquo; 
-					<a title="Flashmobs" href="#">Флешмоби</a> &raquo; 
-					<a title="Create flashmobs" href="#">Створити флешмоб</a>
+					<a href="#">Головна</a> &raquo;
+					<a href="#">Флешмоби</a> &raquo;
+					<a href="#">Створити флешмоб</a>
 				</div>
 				<!-- ENDS Breadcrumb-->	
 			</div>
