--- a/views/my_dialogs.ejs
+++ b/views/my_dialogs.ejs
@@ -8,8 +8,8 @@
 				<!-- Breadcrumb-->
 				<div id="breadcrumbs">
 					Ви знаходитесь: 
-					<a title="Home" href="index.html">Головна</a> &raquo; 
-					<a title="Features" href="flashmobs.html">Мої діалоги</a>
+					<a href="index.html">Головна</a> &raquo; 
+					<a href="flashmobs.html">Мої діалоги</a>
 				</div>
 				<!-- ENDS Breadcrumb-->	
 			</div>
