--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -8,8 +8,8 @@
 				<!-- Breadcrumb-->
 				<div id="breadcrumbs">
 					Ви тут: 
-					<a title="Home" href="#">Головна</a> &raquo; 
-					<a title="Features" href="#">Профіль</a>
+					<a href="#">Головна</a> &raquo;
+					<a href="#">Профіль</a>
 				</div>
 				<!-- ENDS Breadcrumb-->	
 			</div>
