--- a/views/flashmobs_create.ejs
+++ b/views/flashmobs_create.ejs
@@ -73,6 +73,7 @@
 								<option value="organizer">Організатор</option>
 								<option value="main_moderators">Головні модератори</option>
 								<option value="moderators">Модератори</option>
+                                <option value="members">Усі учасники</option>
 							</select>
 						</div>
 						<div>
@@ -81,6 +82,7 @@
 								<option value="organizer">Організатор</option>
 								<option value="main_moderators">Головні модератори</option>
 								<option value="moderators">Модератори</option>
+                                <option value="members">Усі учасники</option>
 							</select>
 						</div>
 						<div>
@@ -111,7 +113,7 @@
 							<input name="captcha"  id="captcha" type="text"/>
 						</div>
 						<br><br>
-						<p><input type="button" value="Зареєструватися" name="submit" id="submit" /></p>
+						<p><input type="submit" value="Ура, у меня новый флешмоб" id="submit" /></p>
 					</fieldset>
 					<p id="error" class="warning">Message</p>
 				</form>
