--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -56,7 +56,7 @@
 						</div>
 						<div>
 							<label>Стать</label>
-							<input name="sex"  class="noposhy" value="M" type="radio"/>Чоловік <input name="sex"  value="T" class="noposhy" type="radio"/>Жінка
+							<input name="sex"  class="noposhy" value="M" type="radio"/>Чоловік <input name="sex"  value="F" class="noposhy" type="radio"/>Жінка
 						</div>
 						<div>
 							<label>Країна проживання</label>
