Fix sex and empty members

--- a/views/flashmobPage.ejs
+++ b/views/flashmobPage.ejs
@@ -156,7 +156,7 @@
                                 <table>
                                     <tbody>
                                         <% for(var i = 0; i < members.length; i++) {
-                                                if(members[i].type == "modertor"||members[i].type == "main_modertor"){
+                                                if(members[i].type == "moderator"||members[i].type == "main_moderator"){
                                                     if(i % 4 == 0)
                                                         {%><tr><%}
                                         %>
