Add 'no user' error processing
Also, move all views for errors in a separate subdirectory

--- a/views/errors/nousererr.ejs
+++ b/views/errors/nousererr.ejs
@@ -1,4 +1,4 @@
-<% layout('layout.ejs') %>
+<% layout('../layout.ejs') %>
 
 <!-- MAIN -->
 <div id="main">
@@ -8,7 +8,7 @@
         <!-- PAGE CONTENT -->
         <div id="page-content">
 
-            <h1>Помилка. Хибний логін або пароль. Спробуйте ще раз.</h1>
+            <h1>Помилка. Такий користувач не існує.</h1>
 
         </div>
         <!-- ENDS PAGE-CONTENT -->
