Add error for not found flashmob
Also unify it with an error 'not found user'

--- a/views/errors/notfounderr.ejs
+++ b/views/errors/notfounderr.ejs
@@ -8,7 +8,7 @@
         <!-- PAGE CONTENT -->
         <div id="page-content">
 
-            <h1>Помилка. Такий користувач не існує.</h1>
+            <h1>Помилка. Сторінку не знайдено.</h1>
 
         </div>
         <!-- ENDS PAGE-CONTENT -->
