--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -94,7 +94,7 @@
                         <li><a href="flashmobs.html">Заплановані флешмоби</a>
                     </ul>
                 </li>
-                <li><a href="skins.html">МОЇ ПОВІДОМЛЕННЯ</a></li>
+                <li><a href="/mydialogs">МОЇ ПОВІДОМЛЕННЯ</a></li>
                 <li class="current-menu-item"><a href="/exit">ВИХІД</a></li>
             </ul>
             <% } else{ %>
