--- a/views/flashmobPage.ejs
+++ b/views/flashmobPage.ejs
@@ -112,16 +112,6 @@
                         </form>
                     </div>
                 </div>
-                <h5 class="toggle-trigger custom"><a href="#">Карта події</a></h5>
-                <div class="toggle-container">
-                    <div class="block">
-                        <!-- feature image -->
-                        <div class="map-image">
-                            <a href="#"><img src="/img/dummies/map.jpg" alt="Feature image" /></a>
-                        </div>
-                        <!-- ENDS feature image -->
-                    </div>
-                </div>
                 <h5 class="toggle-trigger custom"><a href="#">Учасники</a></h5>
                 <div class="toggle-container">
                     <div class="block">
@@ -218,7 +208,9 @@
                 </div>
                 <p class="clear"></p>
                 <!-- ENDS toggle -->
-
+                <div id="map-canvas-wrapper">
+                    <div id="map-canvas"></div>
+                </div>
                 <!-- tags -->
                 <ul class="tags">
                     <li>Tags: </li>
@@ -227,7 +219,6 @@
                     <li><a href="#">Перевізник</a></li>
                 </ul>
                 <!-- ENDS tags -->
-
 
                 <!-- comments list -->
                 <div class="comments-header"><span class="n-comments">25</span><h6 class="text">КОМЕНТАРІ</h6></div>
