--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -67,7 +67,13 @@
 		<!-- tabs -->
 		<link rel="stylesheet" href="/css/tabs.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="/js/tabs.js"></script>
-  		<!-- ENDS tabs -->	
+  		<!-- ENDS tabs -->
+
+		<!-- Google-maps -->
+		<script src="https://maps.googleapis.com/maps/api/js"></script>
+		<script src="/js/GoogleMaps/GoogleMap.js"></script>
+		<link rel="stylesheet" href="/js/GoogleMaps/css/google-maps.css" type="text/css" media="screen" />
+		<!-- Ends Google-maps -->
 		<!-- ENDS JS -->
 	</head>
 	<body>
